# KNIRVCONTROLLER

./: .env.production  .gitignore  .prettierignore  Dockerfile  Gap_Analysis.md  README.md  app.json  asconfig.json  babel.config.cjs  capacitor.config.ts  docker-compose.yml  eas.json  eslint.config.js  fix-waitfor.js  index.html  jest.config.cjs  jest.integration.config.cjs  jest.setup.js  lint-output.json  package-lock.json  package.json  resilient-build-wasm.sh  simple-wasm-build.sh  tailwind.config.js  test-heredoc.sh  test_component.tsx  test_minimal.tsx  test_part.tsx  tsconfig.backend.tsbuildinfo  tsconfig.build.json  tsconfig.json  vite.config.ts
__mocks__/: react-native.js
assembly/: index.ts
browser-bridge/: README.md  knirvwallet.code-workspace  package.json
components/: CryptoCard.tsx  GlassCard.tsx
config/: cli-sync-config.yaml  database.json  unified-config.json
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
scripts/: build-backend.js  build-lora-pipeline.sh  build-pwa.js  build-simple.sh  build-unified.js  build-wasm-assemblyscript.sh  build-wasm.sh  build-with-eas.sh  deploy-cloudflare.js  deploy.js  migrate-to-nebuladb.cjs  orchestrator.js  run-tests.sh  seed-database.js  serve-static.js  setup-capacitor.sh  test-pwa.sh
src/: App-debug.tsx  App.tsx  setupTests.ts  wasm-types.d.ts
test-results/: junit.xml
test-utils/: crypto-test-utils.ts  index.ts  jest-matchers.ts  jest-setup-after-env.js  jest-setup.js  mock-ledger-connector.ts  mock-services.ts  mock-wasm-module.js  test-data.ts  test-helpers.ts  wallet-test-utils.ts  (+2 more)
(+325 files in other folders)
