[package]
name = "knirv-cortex-wasm"
version = "0.1.0"
edition = "2021"
description = "KNIRV Cortex WASM module for AI agent cognitive processing and HRM weight management"
repository = "https://github.com/guiperry/KNIRV_NETWORK"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = { version = "1.0", features = ["alloc"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Performance",
  "Window",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
